fixing test methods